# quasy-open

./: LICENSE  QUICKSTART.md  README.md  config.yaml  install.sh  pyproject.toml
examples/: config.yaml  examples.ipynb  examples.md
quasy/: __init__.py  anonymizer.py  cli.py  plm.py  public_llm.py
quasy_open.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ui/: streamlit_app.py
