# quasy-open/pyproject.toml
[project]
name = "quasy-open"
version = "0.1.0"
description = "Open-source query anonymization for LLMs"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"  # â† FIXED: string, not table
keywords = ["llm", "anonymization", "privacy", "ip-protection", "ai-safety"]

dependencies = [
    "spacy>=3.7.0",
    # Pin the transformer model (not a direct pip install)
    # Users must run: python -m spacy download en_core_web_trf
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff", "mypy"]
api = ["fastapi", "uvicorn[standard]"]

# CLI Entrypoint
[project.scripts]
quasy = "quasy.cli:main"

# Build system
[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

# Tool configurations (optional but clean)
[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = []
fixable = ["ALL"]